// Generated file
import "ccsds_mal/types.proto";



package pusGroundModel.protobuf;

message PusParameter {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.STRING parameterName = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 3;
}
